# mcp-hello-py

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  server.py
